# mesi

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: main.yml  publish.yml
mesi/: __init__.py  __main__.py  compare.py  display.py  main.py  prepare.py  verify.py
tests/: __init__.py  test_compare.py  test_display.py  test_main.py  test_prepare.py  test_verify.py
tests/helpers/: __init__.py  pathutil.py
